# solana-mobile-hack

./: .gitignore  README.md  app.json  global.css  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  polyfill.ts  tailwind.config.js
app/: _layout.tsx  index.tsx
app/(otc)/: _layout.tsx  create.tsx  dashboard.tsx  profile.tsx
app/(otc)/listing/: [id].tsx  data.ts  index.tsx
app/(otc)/message/: [peer].tsx  data.ts  index.tsx
backend/: .env.example  README.md  package.json  pnpm-lock.yaml  server.js
backend/src/config/: appConfig.js
backend/src/middleware/: authMiddleware.js  cors.js
backend/src/models/: listingActivity.js  message.js  nonce.js  refreshToken.js  review.js  user.js
backend/src/routes/: auth.js  listings.js  messages.js  reviews.js  users.js
backend/src/utils/: verifySignature.js
components/layout/: AppHeader.tsx
constants/: theme.ts
contexts/: BackendAuthContext.tsx  ThemePreferenceContext.tsx
contract/: Cargo.toml  README.md
contract/src/: lib.rs
contract/src/tokens/: alien.json  dolf.json
hooks/: useDashboardData.ts  useListings.ts  useWalletTokens.ts
lib/: activity.ts  backendAuth.ts  escrow.ts  listings.ts  solanaConfig.ts  tokenAmount.ts  wallet.ts
