# Cargo.toml

[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17.14"

# Borsh: traits + derive macro are separate crates on 0.10.x
borsh = "0.10.4"
borsh-derive = "0.10.4"

# SPL Token and Associated Token Account
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }

[features]
no-entrypoint = []
